--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,14 @@
-__pychache__
+__pycache__
 config/claude_api_key.txt
 config/openai_api_key.txt
+data/amazon/raw/
+data/mag/raw/
+data/primekg/raw/
+data/primekg/raw.zip
+data/amazon/processed/
+data/mag/processed/
+data/primekg/processed/
+
+download_dataset_amazon.ipynb
+download_dataset_mag.ipynb
+download_dataset_primekg.ipynb
