--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ datasets==2.14.6
 decorator==5.1.1
 executing==2.0.0
 future==0.18.3
-gdown==4.7.1
+gdown==5.1.0
 gitdb==4.0.11
 GitPython==3.1.40
 huggingface-hub==0.17.3
@@ -80,6 +80,7 @@ threadpoolctl==3.2.0
 tiktoken==0.5.2
 tokenizers==0.14.1
 torch==2.0.0
+torch_geometric==2.5.3
 torchmetrics==1.2.0
 torchvision==0.15.1
 tqdm==4.66.1
@@ -89,5 +90,4 @@ types-requests==2.31.0.20240311
 typing-inspect==0.9.0
 typing_extensions==4.11.0
 urllib3==2.0.7
-torch_geometric
 
