--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ data/amazon/processed/
 data/mag/processed/
 data/primekg/processed/
 
+download_mag.py
 download_dataset_amazon.ipynb
 download_dataset_mag.ipynb
 download_dataset_primekg.ipynb
