add emb generation

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 __pycache__
+emb/
 config/claude_api_key.txt
 config/openai_api_key.txt
 data/amazon/raw/
@@ -9,6 +10,7 @@ data/amazon/processed/
 data/mag/processed/
 data/primekg/processed/
 
+draft.ipynb
 download_mag.py
 download_dataset_amazon.ipynb
 download_dataset_mag.ipynb
