--- a/requirements.txt
+++ b/requirements.txt
@@ -1,92 +1,19 @@
-anthropic==0.25.0
-async-timeout==4.0.3
-attrs==23.1.0
-bs4==0.0.1
-certifi==2023.7.22
-click==8.1.7
-cmake==3.27.7
-comm==0.1.4
-contourpy==1.1.1
-cupy-cuda11x==12.2.0
-datasets==2.14.6
-decorator==5.1.1
-executing==2.0.0
-future==0.18.3
-gdown==5.1.0
-gitdb==4.0.11
-GitPython==3.1.40
-huggingface-hub==0.17.3
-ipykernel==6.26.0
-ipython==8.12.3
-jsonpickle==3.0.2
-jsonpointer==2.4
-jupyter_client==8.5.0
-jupyter_core==5.4.0
-langchain==0.0.339
-langdetect==1.0.9
-manifest-ml==0.1.4
-Markdown==3.5
-matplotlib==3.7.4
-matplotlib-inline==0.1.6
-multiprocess==0.70.15
-networkx==3.1
-nltk==3.8.1
-numpy==1.24.4
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.18.1
-nvidia-nvjitlink-cu12==12.2.140
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.1.105
-ogb==1.3.6
-openai==1.14.3
-packaging==23.2
-pandas==2.0.3
-Pygments==2.16.1
-PyTDC==0.4.1
-pyvis==0.3.2
-ray==2.7.1
-regex==2023.10.3
-requests==2.31.0
-requests-oauthlib==1.3.1
-rsa==4.9
-scikit-learn==1.3.1
-scipy==1.10.1
-seaborn==0.13.0
-statsmodels==0.14.1
-sympy==1.12
-tensorboard==2.14.0
-tensorboard-data-server==0.7.2
-tensorboardX==2.6.2.2
-threadpoolctl==3.2.0
-tiktoken==0.5.2
-tokenizers==0.14.1
-torch==2.0.0
-torch_geometric==2.5.3
-torchmetrics==1.2.0
-torchvision==0.15.1
-tqdm==4.66.1
-transformers==4.34.1
-typeguard==4.2.1
-types-requests==2.31.0.20240311
-typing-inspect==0.9.0
-typing_extensions==4.11.0
-urllib3==2.0.7
+anthropic
+bs4
+gdown
+huggingface_hub
+langchain
+langdetect
+multiprocess
+nltk
+numpy
+ogb
+openai
+pandas
+PyTDC
+torch
+torch_geometric
+torchmetrics
+tqdm
+transformers
 
