--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ data/mag/raw/
 data/primekg/raw/
 data/primekg/raw.zip
 data/amazon/processed/
+data/amazon/intermediate/
 data/mag/processed/
 data/primekg/processed/
 
