refactor for pip

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ draft.ipynb
 download_mag.py
 download_dataset_amazon.ipynb
 download_dataset_mag.ipynb
-download_dataset_primekg.ipynb
+download_dataset_prime.ipynb
