--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -37,7 +37,11 @@ jobs:
     needs: [ build ]
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main'
+    environment:
+      name: testpypi
+      url: https://test.pypi.org/project/stark-qa/
     permissions:
+      contents: read
       id-token: write
     steps:
       - name: Download dist artifacts
@@ -57,7 +61,11 @@ jobs:
     needs: [ build ]
     runs-on: ubuntu-latest
     if: startsWith(github.ref, 'refs/tags/')
+    environment:
+      name: pypi
+      url: https://pypi.org/project/stark-qa/
     permissions:
+      contents: read
       id-token: write
     steps:
       - name: Download dist artifacts
